[gd_scene load_steps=6 format=2]

[ext_resource path="res://Structures/Messages/Message.gd" type="Script" id=1]
[ext_resource path="res://Structures/Messages/Undock.gd" type="Script" id=2]
[ext_resource path="res://Structures/Messages/ZoomTo.gd" type="Script" id=3]
[ext_resource path="res://Structures/Messages/LongTextButton.gd" type="Script" id=4]
[ext_resource path="res://Structures/Messages/ExitButton.gd" type="Script" id=5]

[node name="ToolButton" type="ToolButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 145.0
margin_bottom = 72.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "blah blahh"
flat = false
clip_text = true
align = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -86.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Undock" type="Button" parent="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1
script = ExtResource( 2 )

[node name="ZoomTo" type="Button" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_right = 43.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "z"
flat = false
align = 1
script = ExtResource( 3 )

[node name="LongTextButton" type="Button" parent="HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 47.0
margin_right = 63.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "i"
flat = false
align = 1
script = ExtResource( 4 )

[node name="PopupDialog" type="PopupDialog" parent="HBoxContainer/LongTextButton" index="0"]

visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -299.5
margin_top = -40.0
margin_right = 299.5
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = false
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Popup", "Rect", "Size Flags" ]

[node name="Label" type="Label" parent="HBoxContainer/LongTextButton/PopupDialog" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -308.5
margin_top = -7.0
margin_right = 311.5
margin_bottom = 7.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "placeholder"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Size Flags" ]

[node name="ExitButton" type="Button" parent="HBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 67.0
margin_right = 86.0
margin_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "x"
flat = false
align = 1
script = ExtResource( 5 )
_sections_unfolded = [ "Grow Direction" ]

[node name="Time_To_Die" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[connection signal="timeout" from="Time_To_Die" to="." method="_on_Time_To_Die_timeout"]


